Fixed Margin Collapse in CSS. Ty stack overflow.

--- a/root/CSS/styles.css
+++ b/root/CSS/styles.css
@@ -88,7 +88,9 @@ input[type="checkbox"] {
   background-size: 100% 100%;
   width: 100vw;
   height: 100vw;
+  max-width: 100%;
   position: relative;
+  overflow: auto;
 }
 
 /* NAVBAR MEDIA QUERIES */
@@ -117,19 +119,33 @@ input[type="checkbox"] {
     display: block;
     color: black;
   }
+
   .dropdown {
     left: 50%;
     top: 30px;
     transform: translateX(35%);
   }
   .dropdown li:hover {
-    background-color: #4c9e9e;
+    background-color: rgb(0,217,122);
   }
 
   .home-splash {
 	flex-direction: column;
 	margin: auto;
+	padding-left: none;
   }
+
+  .infobox1 {
+	display: flex;
+	flex-direction: column;
+	background-color: rgba(239, 239, 240, .75);
+	justify-content: flex-end;
+	align-items: flex-end;
+	padding-left: 7vh;
+	padding-right: 7vh;
+	margin-bottom: 20vh;
+	overflow: auto;
+}
 
   #backgroundimage {
     background-image: url("../images/backgroundimage.png");
@@ -140,6 +156,7 @@ input[type="checkbox"] {
 	max-width: 100%;
     position: relative;
     background-attachment: fixed;
+	overflow: auto;
   }
 }
 
